<resources>
    <string name="app_name">TrecoX</string>

    <string name="vp_title">Title</string>
    <string name="vp_description">Description</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <string name="hello_text">Hello !</string>
    <string name="sign_in_text">Sign in to Continue</string>
    <string name="country_code">+91</string>
    <string name="mobile_number_hint">Enter Mobile Number</string>
    <string name="login_text_line">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="logout">Log Out</string>

    <string name="verify">Verify</string>
    <string name="otp_text">Enter Your OTP</string>
    <string name="remaining_seconds">Remaining seconds</string>

    <string name="title_home">Home</string>
    <string name="title_order_list">Order List</string>
    <string name="title_info">User Info</string>

    <string name="empty_company_list">Empty Company List</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="wholesalers_category">Wholesalers category</string>
    <string name="address">Address</string>
    <string name="shop">Shop</string>
    <string name="add_info">Add Information</string>
    <string name="pin_code">Pin code</string>
    <string name="title_permission_dialog">Permission Needed</string>
    <string name="message_permission_dialog_camera">Permission is needed for accessing the Camera </string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="message_permission_dialog_gallery">Allow to Access Photos, Media and Files on Your Device?</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="edit">Edit</string>

    <string name="products">Products</string>
    <string name="select_products">Select Products</string>
    <string name="send_connection_request">Send Connection Request</string>
    <string name="sending_connection_request">Sending Connection Request</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="mrp">MRP</string>
    <string name="empty_product_list">Empty Product List</string>
    <string name="company_detail">Company Detail</string>
    <string name="product_detail">Product Detail</string>

    <string name="add_items">Add Items</string>
    <string name="total_items">Total Items</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="ordering_product">Ordering Product</string>
    <string name="empty_order_list">Empty Order List</string>
    <string name="company">Company</string>
    <string name="date">Date</string>
    <string name="items">Items</string>

    //Errors
    <string name="something_wrong_error">Something went wrong.\n Try again.</string>
    <string name="connection_error">You can not send order because of you have not connect with this Company\n Try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>