<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_90"
    android:theme="@style/Theme.TrecoX"
    tools:context=".ui.ProductOrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_cross_white"
            app:title="@string/product_detail"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/bg_rounded_border"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:cardCornerRadius="@dimen/corner_radius_8dp"
        app:cardElevation="@dimen/elevations_4dp"
        app:layout_constraintTop_toBottomOf="@id/iv_product">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16dp">

            <TextView
                android:id="@+id/tv_product_name"
                style="@style/Widget.App.TextAppearance.HeadLine4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_description"
                style="@style/Widget.App.TextAppearance.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/vp_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

            <TextView
                android:id="@+id/subCategory"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_description" />

            <TextView
                android:id="@+id/tv_subCategory"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/category"
                app:layout_constraintStart_toEndOf="@id/subCategory"
                app:layout_constraintTop_toBottomOf="@id/tv_product_description" />

            <TextView
                android:id="@+id/price"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subCategory" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/price"
                app:layout_constraintStart_toEndOf="@id/price"
                app:layout_constraintTop_toBottomOf="@id/subCategory" />

            <TextView
                android:id="@+id/mrp"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/mrp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/tv_mrp"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/mrp"
                app:layout_constraintStart_toEndOf="@id/mrp"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/tv_add_items"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/add_items"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mrp" />

            <Button
                android:id="@+id/btn_minus"
                style="@style/Widget.App.Material.Button.Outline"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                app:layout_constraintEnd_toStartOf="@id/tv_items"
                app:layout_constraintTop_toBottomOf="@id/mrp" />

            <TextView
                android:id="@+id/tv_items"
                style="@style/Widget.App.Material.Button.Outline"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="0"
                app:layout_constraintEnd_toStartOf="@id/btn_plus"
                app:layout_constraintTop_toBottomOf="@id/mrp" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/Widget.App.Material.Button.Outline"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mrp" />

            <TextView
                android:id="@+id/total_price"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/total_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_plus" />

            <TextView
                android:id="@+id/tv_total_price"
                style="@style/Widget.App.TextAppearance.HeadLine6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/total_price"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/total_price"
                app:layout_constraintTop_toBottomOf="@id/btn_plus" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_8dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>